--- a/app/src/main/res/layout/configuration_fragment.xml
+++ b/app/src/main/res/layout/configuration_fragment.xml
@@ -3,15 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_light"
-    android:gravity="center"
+    android:gravity="bottom"
     android:orientation="vertical">
 
-    <TextView
+    <EditText
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Configuration"/>
+        android:text="Id"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Link product Id" />
 
 </LinearLayout>
