--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/action_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home"/>
-
     <item
         android:id="@+id/action_schedule"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@mipmap/calendar"
         android:title="Schedule"/>
 
     <item
+        android:id="@+id/action_home"
+        android:icon="@mipmap/home"
+        android:title="@string/title_home"/>
+
+    <item
         android:id="@+id/action_status"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@mipmap/clock"
         android:title="Status"/>
 
 </menu>
