implemented the rest of the xml designs

--- a/app/src/main/res/layout/configuration_fragment.xml
+++ b/app/src/main/res/layout/configuration_fragment.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
+    android:background="@color/colorGrey"
+    android:padding="10dp"
     android:orientation="vertical">
 
     <EditText
@@ -11,12 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Id"/>
+        android:background="@color/colorGreyInput"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:padding="10dp"
+        android:hint="Device Id"/>
 
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Link product Id" />
+        android:background="@drawable/button_bg_stroke"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:text="Link product Id"/>
 
 </LinearLayout>
