--- a/app/src/main/res/layout/schedule_fragment.xml
+++ b/app/src/main/res/layout/schedule_fragment.xml
@@ -3,42 +3,149 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="fill"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorGrey"
+    android:paddingTop="15dp"
+    android:gravity="center">
 
-    <FrameLayout
-        android:id="@+id/buttonLayout0"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="15dp"
+            android:gravity="fill"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/addButton0"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:background="@mipmap/accept"
+                />
+
+            <EditText
+                android:id="@+id/timeText0"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:hint="Time"
+                android:ems="10"
+                android:background="@color/colorGreyInput"
+                android:textAlignment="center"
+                android:inputType="time" />
+
+            <EditText
+                android:id="@+id/qtyText0"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:hint="gr."
+                android:ems="10"
+                android:background="@color/colorGreyInput"
+                android:layout_marginLeft="8dp"
+                android:textAlignment="center"
+                android:inputType="" />
+
+            <Button
+                android:id="@+id/deleteButton0"
+                android:layout_width="60dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:background="@mipmap/delete"
+                />
+        </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
-    </FrameLayout>
+        android:layout_height="60dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:gravity="fill"
+        android:orientation="horizontal">
 
-    <FrameLayout
-        android:id="@+id/buttonLayout1"
+        <Button
+            android:id="@+id/addButton1"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:background="@mipmap/accept"
+            />
+
+        <EditText
+            android:id="@+id/timeText1"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:hint="Time"
+            android:ems="10"
+            android:background="@color/colorGreyInput"
+            android:textAlignment="center"
+            android:inputType="time" />
+
+        <EditText
+            android:id="@+id/qtyText1"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:hint="gr."
+            android:ems="10"
+            android:background="@color/colorGreyInput"
+            android:layout_marginLeft="8dp"
+            android:textAlignment="center"
+            android:inputType="" />
+
+        <Button
+            android:id="@+id/deleteButton1"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:background="@mipmap/delete"
+            />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
-    </FrameLayout>
+        android:layout_height="60dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:gravity="fill"
+        android:orientation="horizontal">
 
-    <FrameLayout
-        android:id="@+id/buttonLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
-    </FrameLayout>
+        <Button
+            android:id="@+id/addButton2"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:background="@mipmap/accept"
+            />
 
-    <FrameLayout
-        android:id="@+id/buttonLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
-    </FrameLayout>
+        <EditText
+            android:id="@+id/timeText2"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:hint="Time"
+            android:ems="10"
+            android:background="@color/colorGreyInput"
+            android:textAlignment="center"
+            android:inputType="time" />
 
-    <FrameLayout
-        android:id="@+id/buttonLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
-    </FrameLayout>
+        <EditText
+            android:id="@+id/qtyText2"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:hint="gr."
+            android:ems="10"
+            android:background="@color/colorGreyInput"
+            android:layout_marginLeft="8dp"
+            android:textAlignment="center"
+            android:inputType="" />
 
+        <Button
+            android:id="@+id/deleteButton2"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:background="@mipmap/delete"
+            />
+    </LinearLayout>
 </LinearLayout>
