--- a/app/src/main/res/layout/spurna_fragment.xml
+++ b/app/src/main/res/layout/spurna_fragment.xml
@@ -7,14 +7,50 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/byteManagerText"
+        android:layout_width="279dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="48dp"
+        android:gravity="center"
+        android:text="@string/app_title"
+        android:textSize="40sp"
+        android:fontFamily="@font/eccentricstd"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintTop_toBottomOf="parent" />
+
+    <Button
+        android:id="@+id/buttonLink"
+        android:layout_width="124dp"
+        android:layout_height="99dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginTop="108dp"
+        android:background="@mipmap/link_device"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
+
+    <Button
+        android:id="@+id/buttonCheck"
+        android:layout_width="124dp"
+        android:layout_height="99dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginTop="108dp"
+        android:background="@mipmap/check_status"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
+
+    <Button
+        android:id="@+id/buttonSchedule"
+        android:layout_width="280dp"
+        android:layout_height="168dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginTop="256dp"
+        android:background="@mipmap/schedule"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
