--- a/app/src/main/res/layout/status_fragment.xml
+++ b/app/src/main/res/layout/status_fragment.xml
@@ -19,7 +19,8 @@
             android:layout_marginStart="40dp"
             android:layout_marginLeft="40dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            />
 
 
         <FrameLayout
@@ -29,11 +30,13 @@
             android:layout_gravity="center_horizontal">
 
             <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/buttonFill"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:text="@string/button_feed" />
+                android:background="@drawable/round_button"
+                android:textSize="18sp"
+                android:text="FILL THE BOWL!" />
 
         </FrameLayout>
 
