--- a/app/src/main/res/layout/schedule_fragment.xml
+++ b/app/src/main/res/layout/schedule_fragment.xml
@@ -4,17 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorGrey"
     android:paddingTop="15dp"
     android:gravity="center">
 
     <LinearLayout
+        android:id="@+id/scheduleLayout0"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:gravity="fill"
+        android:background="@color/colorGrey"
         android:orientation="horizontal">
 
         <EditText
@@ -27,7 +28,7 @@
             android:inputType="time"
             android:textAlignment="center" />
 
-        <!--<EditText
+        <EditText
                 android:id="@+id/qtyText0"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
@@ -36,7 +37,7 @@
                 android:background="@color/colorGreyInput"
                 android:layout_marginLeft="8dp"
                 android:textAlignment="center"
-                android:inputType="" />-->
+                android:inputType="" />
         <Spinner
             android:id="@+id/qty0"
             android:layout_width="94dp"
@@ -58,12 +59,14 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/scheduleLayout1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:gravity="fill"
+        android:background="@color/colorGrey"
         android:orientation="horizontal">
 
         <EditText
@@ -105,13 +108,16 @@
             android:layout_height="match_parent"
             android:background="@mipmap/delete" />
     </LinearLayout>
+
     <LinearLayout
+        android:id="@+id/scheduleLayout2"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:gravity="fill"
+        android:background="@color/colorGrey"
         android:orientation="horizontal">
 
         <EditText
